# project1

./: .env_example  .env_template  .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_all.py
data/: transactions.py
src/: decorators.py  external_api.py  generators.py  logger.py  main.py  masks.py  processing.py  reports.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_logger.py  test_main.py  test_masks.py  test_processing.py  test_reports.py  test_utils.py  test_widget.py
